==> zephyrproject-rtos/zephyr/drivers/serial/uart_hc32.c <==
#define DT_DRV_COMPAT xhsc_hc32_uart
#include <zephyr/kernel.h>
#include <zephyr/arch/cpu.h>
#include <zephyr/sys/__assert.h>
#include <soc.h>
#include <zephyr/init.h>
#include <zephyr/drivers/interrupt_controller/intc_hc32.h>
#include <zephyr/drivers/clock_control.h>
#include <zephyr/drivers/clock_control/hc32_clock_control.h>
#include <zephyr/pm/policy.h>
#include <zephyr/pm/device.h>
#include <zephyr/drivers/dma/dma_hc32.h>
#include <zephyr/drivers/dma.h>
#include <zephyr/linker/sections.h>
#include "uart_hc32.h"
#include <hc32_ll_usart.h>
#include <hc32_ll_interrupts.h>
#include <zephyr/logging/log.h>
#include <zephyr/irq.h>
#define HC32_UART_DOMAIN_CLOCK_SUPPORT 1
#define HC32_UART_DOMAIN_CLOCK_SUPPORT 0

static int uart_hc32_configure(const struct device *dev,
				const struct uart_config *cfg)
{
	const struct uart_hc32_config *config = dev->config;
	struct uart_hc32_data *data = dev->data;
	struct uart_config *uart_cfg = data->uart_cfg;
	const uint32_t parity = uart_hc32_cfg2ll_parity(cfg->parity);
	const uint32_t stopbits = uart_hc32_cfg2ll_stopbits(cfg->stop_bits);
	const uint32_t databits = uart_hc32_cfg2ll_databits(cfg->data_bits);

	/* Hardware doesn't support mark or space parity */
	if ((cfg->parity == UART_CFG_PARITY_MARK) ||
		(cfg->parity == UART_CFG_PARITY_SPACE)) {
		return -ENOTSUP;
	}

	/* Driver does not supports parity + 9 databits */
	if ((cfg->parity != UART_CFG_PARITY_NONE) &&
		(cfg->data_bits == USART_DATA_WIDTH_9BIT)) {
		return -ENOTSUP;
	}

	/* When the transformed ddl parity don't match with what was requested,
	 * then it's not supported
	 */
	if (uart_hc32_ll2cfg_parity(parity) != cfg->parity) {
		return -ENOTSUP;
	}

	/* When the transformed ddl stop bits don't match with what was requested,
	 * then it's not supported
	 */
	if (uart_hc32_ll2cfg_stopbits(stopbits) != cfg->stop_bits) {
		return -ENOTSUP;
	}

	/* When the transformed ddl databits don't match with what was requested,
	 * then it's not supported
	 */
	if (uart_hc32_ll2cfg_databits(databits) != cfg->data_bits) {
		return -ENOTSUP;
	}

	USART_FuncCmd(config->usart, USART_TX | USART_RX, DISABLE);
	uart_hc32_set_parity(dev, parity);
	uart_hc32_set_stopbits(dev, stopbits);
	uart_hc32_set_databits(dev, databits);
	uart_hc32_set_baudrate(dev, uart_cfg->baudrate);
	USART_FuncCmd(config->usart, USART_TX | USART_RX, ENABLE);

	return 0;
}

static int uart_hc32_config_get(const struct device *dev,
				 struct uart_config *cfg)
{
	struct uart_hc32_data *data = dev->data;
	struct uart_config *uart_cfg = data->uart_cfg;

	cfg->baudrate = uart_cfg->baudrate;
	cfg->parity = uart_hc32_ll2cfg_parity(uart_hc32_get_parity(dev));
	cfg->stop_bits = uart_hc32_ll2cfg_stopbits(uart_hc32_get_stopbits(dev));
	cfg->data_bits = uart_hc32_ll2cfg_databits(uart_hc32_get_databits(dev));
	cfg->flow_ctrl = uart_hc32_ll2cfg_hwctrl(uart_hc32_get_hwctrl(dev));

	return 0;
}

static int uart_hc32_poll_in(const struct device *dev, unsigned char *c)
{
	const struct uart_hc32_config *config = dev->config;

	if (USART_GetStatus(config->usart,
							USART_FLAG_OVERRUN | USART_FLAG_RX_TIMEOUT)) {
		USART_ClearStatus(config->usart,
							USART_FLAG_OVERRUN | USART_FLAG_FRAME_ERR);
	}

	if (SET != USART_GetStatus(config->usart, USART_FLAG_RX_FULL))
	{
		return EIO;
	}

	*c = (unsigned char)USART_ReadData(config->usart);
	return 0;
}

static void uart_hc32_poll_out(const struct device *dev, unsigned char c)
{
	unsigned int key;
	const struct uart_hc32_config *config = dev->config;

	key = irq_lock();
	while (1)
	{
		if (USART_GetStatus(config->usart, USART_FLAG_TX_EMPTY)) {
			break;
		}
	}

	USART_WriteData(config->usart, (uint16_t)c);
	irq_unlock(key);
}

static int uart_hc32_err_check(const struct device *dev)
{
	const struct uart_hc32_config *config = dev->config;
	uint32_t err = 0U;

	if (USART_GetStatus(config->usart, USART_FLAG_OVERRUN)) {
		err |= UART_ERROR_OVERRUN;
	}

	if (USART_GetStatus(config->usart, USART_FLAG_FRAME_ERR)) {
		err |= UART_ERROR_FRAMING;
	}

	if (USART_GetStatus(config->usart, USART_FLAG_PARITY_ERR)) {
		err |= UART_ERROR_PARITY;
	}

	return err;
}

static int uart_hc32_fifo_fill(const struct device *dev,
			const uint8_t *tx_data, int size)
{
	if (UART_CFG_DATA_BITS_9 ==
			uart_hc32_ll2cfg_databits(uart_hc32_get_databits(dev))) {
		return -ENOTSUP;
	}
	return uart_hc32_fifo_fill_visitor(dev, (const void *)tx_data, size,
						fifo_fill_with_u8);
}

static int uart_hc32_fifo_read(const struct device *dev,
			uint8_t *rx_data, const int size)
{
	if (UART_CFG_DATA_BITS_9 ==
			uart_hc32_ll2cfg_databits(uart_hc32_get_databits(dev))) {
		return -ENOTSUP;
	}
	return uart_hc32_fifo_read_visitor(dev, (void *)rx_data, size,
						fifo_read_with_u8);
}

static void uart_hc32_irq_tx_enable(const struct device *dev)
{
	const struct uart_hc32_config *config = dev->config;

	USART_FuncCmd(config->usart,
		USART_INT_TX_EMPTY | USART_INT_TX_CPLT, ENABLE);
}

static void uart_hc32_irq_tx_disable(const struct device *dev)
{
	const struct uart_hc32_config *config = dev->config;

	USART_FuncCmd(config->usart,
		USART_INT_TX_EMPTY | USART_INT_TX_CPLT, DISABLE);
}

static int uart_hc32_irq_tx_ready(const struct device *dev)
{
	const struct uart_hc32_config *config = dev->config;

	return USART_GetStatus(config->usart, USART_FLAG_TX_EMPTY);
}

static int uart_hc32_irq_tx_complete(const struct device *dev)
{
	const struct uart_hc32_config *config = dev->config;

	return USART_GetStatus(config->usart, USART_FLAG_TX_CPLT);
}

static void uart_hc32_irq_rx_enable(const struct device *dev)
{
	const struct uart_hc32_config *config = dev->config;

	USART_FuncCmd(config->usart, USART_INT_RX, ENABLE);
}

static void uart_hc32_irq_rx_disable(const struct device *dev)
{
	const struct uart_hc32_config *config = dev->config;

	USART_FuncCmd(config->usart, USART_INT_RX, DISABLE);
}

static int uart_hc32_irq_rx_ready(const struct device *dev)
{
	const struct uart_hc32_config *config = dev->config;

	return USART_GetStatus(config->usart, USART_FLAG_RX_FULL);
}

static void uart_hc32_irq_err_enable(const struct device *dev)
{
	const struct uart_hc32_config *config = dev->config;

	/* Enable FE, ORE parity error interruption */
	USART_FuncCmd(config->usart, USART_RX_TIMEOUT |
					 USART_INT_RX_TIMEOUT, ENABLE);
}

static void uart_hc32_irq_err_disable(const struct device *dev)
{
	const struct uart_hc32_config *config = dev->config;

	USART_FuncCmd(config->usart, USART_RX_TIMEOUT |
					 USART_INT_RX_TIMEOUT, DISABLE);
}

static int uart_hc32_irq_is_pending(const struct device *dev)
{
	const struct uart_hc32_config *config = dev->config;

	return USART_GetStatus(config->usart, USART_FLAG_ALL);
}

static void uart_hc32_irq_callback_set(const struct device *dev,
					uart_irq_callback_user_data_t cb,
					void *user_data)
{
	uint32_t i;
	struct uart_hc32_data *data = dev->data;

	if ((user_data == NULL) || (*(uint32_t *)user_data >= UART_INT_NUM)) {
		for (i = 0; i< UART_INT_NUM; i++) {
			data->cb[i].user_cb = cb;
			data->cb[i].user_data = user_data;
		}
	} else {
		i = *(uint32_t *)user_data;
		data->cb[i].user_cb = cb;
		data->cb[i].user_data = user_data;
	}
}
